Read What am i doing

--- a/slam_bot/CMakeLists.txt
+++ b/slam_bot/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(cpp_learning)
+project(slam_bot)
 
 # Default to C99
 if(NOT CMAKE_C_STANDARD)
@@ -22,16 +22,25 @@ find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(turtlesim REQUIRED)
 find_package(nav_msgs REQUIRED)
+#find_package(lpigpiod_if2 REQUIRED)
 # find_package(chrono REQUIRED)
 
+INCLUDE_DIRECTORIES(/usr/local/lib)
+LINK_DIRECTORIES(/usr/local/lib)
 
+target_include_directories(/usr/local/include/libpigpiod_if2)
 
-add_executable(talker_exec src/pub.cpp)
-ament_target_dependencies(talker_exec rclcpp std_msgs)
+add_executable(encs_pubs_exec src/enc_publisher.cpp)
+ament_target_dependencies(encs_pubs_exec rclcpp std_msgs)
+
+add_executable(teleop_drive_exe src/cmd_vel_to_drive.cpp)
+ament_target_dependencies(teleop_drive_exe rclcpp geometry_msgs libpigpiod_if2.so)
+
 
 
 install(TARGETS
-  enc_pub_exe
+  encs_pubs_exec
+  teleop_drive_exe
   DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY
