--- a/slam_bot/package.xml
+++ b/slam_bot/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>slamBot</name>
+  <name>slam_bot</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="noshluk2@gmail.com">luqman</maintainer>
